--- a/teste-vr-front/package.json
+++ b/teste-vr-front/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
     "jest": "^30.0.5",
+    "ngx-socket-io": "^4.9.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^11.1.0",
